--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,22 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+
+catboost==1.0.6
+entrypoints==0.4
+flake8==5.0.4
+numpy==1.23.1
+pandas==1.4.3
+jupyter==1.0.0
+jupyter-client==7.3.4
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+seaborn==0.12.1
+sklearn==0.0
+hydra-core==1.2.0
+mlflow==1.30.0
+pytest==7.2.0
