--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install requirements
-        run: pip install -r requirements.txt
+        run: pip3 install -r requirements.txt
       - name: Linter
         run: flake8 --ignore=E501,W291,E226,W504 ./ 
       - name: Tests
