--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
         run: pip3 install -r requirements.txt
       - name: Linter
         run: flake8 --ignore=E501,W291,E226,W504,F541,F401 ./
+      - name: basic run
+        run: python -m ml_example.train --config-name=train_config_catboost
       - name: Tests
         run: python -m pytest tests
       - name: Test train
