--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Setup
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: 'pypy3.9' 
       - name: Install requirements
         run: pip3 install -r requirements.txt
       - name: Linter
