--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 'pypy3.9' 
+      - run: pip3 install --upgrade pip
       - name: Install requirements
         run: pip3 install -r requirements.txt
       - name: Linter
