--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
       - name: Setup
         uses: actions/setup-python@v4
         with:
-          python-version: 'pypy3.10' 
+          python-version: '3.9'
+          cache: 'pip' # caching pip dependencies
       - run: pip3 install --upgrade pip
       - name: Install requirements
         run: pip3 install -r requirements.txt
