--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install requirements
         run: pip3 install -r requirements.txt
       - name: Linter
-        run: flake8 --ignore=E501,W291,E226,W504,F541,F401 ./
+        run: flake8 --ignore=E501,W291,E226,W504,F541,F401,E265  ./
       - name: basic run
         run: python -m ml_example.train --config-name=train_config_catboost
       - name: Tests
